style svg with css

--- a/styles.css
+++ b/styles.css
@@ -28,20 +28,6 @@
     background: white;
 }
 
-.heart {
-    fill: url(#grad1);
-}
-
-svg.heart-copy {
-    --outer: red;
-    --inner: var(--purple);
-    width: 1000px;
-}
-
-svg.shield-icon {
-    fill: red;
-}
-
 .heartIcon {
     width: 30px;
     height: 30px;
@@ -51,6 +37,7 @@ svg.shield-icon {
 .heartIcon svg {
     width: 100%;
     height: 100%;
+    fill: darkred;
 }
 
 .healthBar {
