dubious might representation

--- a/styles.css
+++ b/styles.css
@@ -34,14 +34,22 @@
     transform: rotate(45deg);
 }
 
-.heartIcon svg {
+.heartIcons svg,
+.mightIcons svg {
     width: 100%;
     height: 100%;
     fill: darkred;
 }
 
-.healthBar {
+.healthBar,
+.mightBar {
     display: flex;
     flex-wrap: wrap;
     /* transform: rotate(20deg); */
+}
+
+.mightIcons {
+    width: 30px;
+    height: 30px;
+    margin: 2px;
 }
