--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,9 @@
     flex-direction: column;
     justify-content: space between;
 }
+
+.display {
+  width: 80%;
+  display: flex;
+  justify-content:space-between;
+}
